Update about page v5

--- a/about.html
+++ b/about.html
@@ -143,38 +143,35 @@
                 </div>
 
                 <div class="dropdown-panel" id="userDropdown">
-
                     <!-- Блок Баланса -->
                     <div class="dropdown-balance">
                         <div class="dropdown-item balance-item" id="userBalance">
                             <img src="/assets/icons/wallet.svg" class="item-icon theme-icon" alt="">
                             <span class="balance-amount theme-text" id="balanceAmount">0</span>
+                            <button class="deposit_wallet">
+                                <img src="/assets/icons/add.svg" alt="add" />
+                            </button>
                         </div>
-                        <button class="deposit_wallet" title="Пополнить">
-                            <img src="/assets/icons/add.svg" alt="add" />
-                        </button>
+                        <div class="balance-divider"></div>
                     </div>
-                    <div class="balance-divider"></div>
-                </div>
-
-                <div class="dropdown-item" id="menuProfile">
-                    <img src="/assets/icons/user.svg" class="item-icon theme-icon" alt="">
-                    <span class="menu-profile-text theme-text">My profile</span>
-                </div>
-                <div class="dropdown-item" id="menuSettings">
-                    <img src="/assets/icons/settings.svg" class="item-icon theme-icon" alt="">
-                    <span class="menu-settings-text theme-text">Settings</span>
-                </div>
-                <div class="dropdown-item" id="menuSupport">
-                    <img src="/assets/icons/help.svg" class="item-icon theme-icon" alt="">
-                    <span class="menu-support-text theme-text">Support</span>
-                </div>
-                <div class="dropdown-item" id="menuLogout">
-                    <img src="/assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
-                    <span class="menu-logout-text theme-text">Logout</span>
+                    <div class="dropdown-item" id="menuProfile">
+                        <img src="/assets/icons/user.svg" class="item-icon theme-icon" alt="">
+                        <span class="menu-profile-text theme-text">My profile</span>
+                    </div>
+                    <div class="dropdown-item" id="menuSettings">
+                        <img src="/assets/icons/settings.svg" class="item-icon theme-icon" alt="">
+                        <span class="menu-settings-text theme-text">Settings</span>
+                    </div>
+                    <div class="dropdown-item" id="menuSupport">
+                        <img src="/assets/icons/help.svg" class="item-icon theme-icon" alt="">
+                        <span class="menu-support-text theme-text">Support</span>
+                    </div>
+                    <div class="dropdown-item" id="menuLogout">
+                        <img src="/assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
+                        <span class="menu-logout-text theme-text">Logout</span>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </header>
 
