Update modal window v2

--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/pushnotify.css">
     <link rel="stylesheet" href="css/banner_promo.css">
     <link rel="stylesheet" href="css/modal_promo.css">
+    <link rel="stylesheet" href="/css/deposit.css">
 </head>
 
 <body>
@@ -150,6 +151,9 @@
                         <div class="dropdown-item balance-item" id="userBalance">
                             <img src="/assets/icons/wallet.svg" class="item-icon theme-icon" alt="">
                             <span class="balance-amount theme-text" id="balanceAmount">0</span>
+                            <button class="deposit_wallet">
+                                <img src="/assets/icons/add.svg" alt="add" class="theme-icon" />
+                            </button>
                         </div>
                         <div class="balance-divider"></div>
                     </div>
@@ -219,6 +223,31 @@
 
             <div class="mobile-logo">
                 <img src="/assets/icons/logo-chromo.png" alt="ValeyevStudio Logo">
+            </div>
+        </div>
+    </div>
+
+    <!-- Модальное окно: Deposit & Promo -->
+    <div class="modal-deposit" id="depositModal">
+        <div class="modal-content .theme-modal">
+            <button class="close-btn">&times;</button>
+            <div class="switcher">
+                <button class="switch active theme-text" data-target="deposit">Deposit</button>
+                <button class="switch theme-text" data-target="promo">Promo</button>
+            </div>
+
+            <div class="modal-body" id="deposit">
+                <p class="in-progress theme-text">В разработке</p>
+            </div>
+
+            <div class="modal-body hidden" id="promo">
+                <h2 class="theme-text">Активация промокода</h2>
+                <p class="description-promocode theme-text">
+                    Введите промокод и получите деньги, которые можно потратить на покупку подписки, кода и подарки
+                    другу. Промокод состоит из 16 символов.
+                </p>
+                <input type="text" id="promoInput" maxlength="19" placeholder="XXXX-XXXX-XXXX-XXXX" />
+                <button id="activatePromo" disabled class="theme-text">Активировать</button>
             </div>
         </div>
     </div>
@@ -457,6 +486,7 @@
     <script src="js/pushnotify.js"></script>
     <script src="js/banner_promo.js"></script>
     <script src="js/modal_promo.js"></script>
+    <script src="js/modal_deposit.js" defer></script>
 </body>
 
 </html>
