Update modal window v2

--- a/home.html
+++ b/home.html
@@ -229,7 +229,7 @@
 
     <!-- Модальное окно: Deposit & Promo -->
     <div class="modal-deposit" id="depositModal">
-        <div class="modal-content .theme-modal">
+        <div class="modal-content theme-modal">
             <button class="close-btn">&times;</button>
             <div class="switcher">
                 <button class="switch active theme-text" data-target="deposit">Deposit</button>
