Update modal window v5

--- a/home.html
+++ b/home.html
@@ -241,13 +241,15 @@
             </div>
 
             <div class="modal-body hidden" id="promo">
-                <h2 class="theme-text">Активация промокода</h2>
-                <p class="description-promocode theme-text">
-                    Введите промокод и получите деньги, которые можно потратить на покупку подписки, кода и подарки
-                    другу. Промокод состоит из 16 символов.
-                </p>
-                <input type="text" id="promoInput" maxlength="19" placeholder="XXXX-XXXX-XXXX-XXXX" />
-                <button id="activatePromo" disabled class="theme-text">Активировать</button>
+                <div id="promo-content">
+                    <h2 class="theme-text">Активация промокода</h2>
+                    <p class="description-promocode theme-text">
+                        Введите промокод и получите деньги, которые можно потратить на покупку подписки, кода и подарки
+                        другу. Промокод состоит из 16 символов.
+                    </p>
+                    <input type="text" id="promoInput" maxlength="19" placeholder="XXXX-XXXX-XXXX-XXXX" />
+                    <button id="activatePromo" disabled class="theme-text">Активировать</button>
+                </div>
             </div>
         </div>
     </div>
