Update modal window v15

--- a/home.html
+++ b/home.html
@@ -249,6 +249,7 @@
                     </p>
                     <input type="text" id="promoInput" maxlength="19" placeholder="XXXX-XXXX-XXXX-XXXX" />
                     <button id="activatePromo" disabled class="theme-text">Активировать</button>
+                    <div id="promoMessageContainer"></div>
                 </div>
             </div>
         </div>
