Update promocode system

--- a/home.html
+++ b/home.html
@@ -231,9 +231,13 @@
     <div class="modal-deposit" id="depositModal">
         <div class="modal-content theme-modal">
             <button class="close-btn">&times;</button>
+            
             <div class="switcher">
-                <button class="switch active theme-text" data-target="deposit">Deposit</button>
-                <button class="switch theme-text" data-target="promo">Promo</button>
+                <div class="switch-wrapper">
+                    <div class="switch-indicator"></div>
+                    <button class="switch active theme-text" data-target="deposit">Deposit</button>
+                    <button class="switch theme-text" data-target="promo">Promo</button>
+                </div>
             </div>
 
             <div class="modal-body" id="deposit">
