--- a/home.html
+++ b/home.html
@@ -251,7 +251,7 @@
                         Enter a promo code and receive money that can be spent on buying a subscription, a code, and
                         gifts for a friend. The promo code consists of 16 characters.
                     </p>
-                    <input type="text" id="promoInput" maxlength="19" placeholder="XXXX-XXXX-XXXX-XXXX" />
+                    <input type="text" id="promoInput" maxlength="19" placeholder="XXXX-XXXX-XXXX-XXXX" class="theme-input" />
                     <button id="activatePromo" disabled
                         class="button-promocode-activate theme-text">Activate</button>
                     <div id="promoMessageContainer"></div>
