Update promocode system fix v2

--- a/home.html
+++ b/home.html
@@ -233,7 +233,7 @@
             <button class="close-btn">&times;</button>
 
             <div class="switcher">
-                <div class="switch-wrapper">
+                <div class="switch-wrapper theme-button-switcher">
                     <div class="switch-indicator"></div>
                     <button class="switch active switch_title_deposit theme-text" data-target="deposit">Deposit</button>
                     <button class="switch switch_title_promo theme-text" data-target="promo">Promo</button>
