Update promocode system fix v6

--- a/home.html
+++ b/home.html
@@ -251,7 +251,7 @@
                         Enter a promo code and receive money that can be spent on buying a subscription, a code, and
                         gifts for a friend. The promo code consists of 16 characters.
                     </p>
-                    <input class="theme-input" type="text" placeholder="XXXX-XXXX-XXXX-XXXX" id="promoInput" maxlength="19" />
+                    <input class="promocode-input theme-input" type="text" placeholder="XXXX-XXXX-XXXX-XXXX" id="promoInput" maxlength="19" />
                     <button id="activatePromo" disabled
                         class="button-promocode-activate theme-text">Activate</button>
                     <div id="promoMessageContainer"></div>
