Update promocode system fix v7

--- a/home.html
+++ b/home.html
@@ -245,15 +245,14 @@
             </div>
 
             <div class="modal-body hidden" id="promo">
-                <div id="promo-content">
+                <div class="promo-content" id="promo-content">
                     <h2 class="promocode-title theme-text">Promo code activation</h2>
                     <p class="description-promocode theme-text">
                         Enter a promo code and receive money that can be spent on buying a subscription, a code, and
                         gifts for a friend. The promo code consists of 16 characters.
                     </p>
                     <input class="promocode-input theme-input" type="text" placeholder="XXXX-XXXX-XXXX-XXXX" id="promoInput" maxlength="19" />
-                    <button id="activatePromo" disabled
-                        class="button-promocode-activate theme-text">Activate</button>
+                    <button class="button-promocode-activate theme-text" id="activatePromo" disabled>Activate</button>
                     <div id="promoMessageContainer"></div>
                 </div>
             </div>
