Test update modal premium buy v2 fix

--- a/home.html
+++ b/home.html
@@ -249,7 +249,7 @@
         </div>
     </div>
 
-    <!-- Модальное окно: Deposit & Promo -->
+    <!-- Модальное окно: Premium subscirbe & price - buy -->
     <div class="modal-premium-subscribe-backdrop">
         <div class="modal-premium-subscribe-container">
             <h2 class="modal-premium-subscribe-title">Purchase of a premium subscription</h2>
