Test update + update localization v6

--- a/home.html
+++ b/home.html
@@ -276,7 +276,7 @@
                 </div>
             </div>
 
-            <p class="modal-premium-subscribe-price theme-text">Amount to be paid: <span id="priceValue">0</span></p>
+            <p class="modal-premium-subscribe-price theme-text">Amount to be paid:</p> <span id="priceValue">0</span>
 
             <button id="buyButton" class="modal-premium-subscribe-button" disabled>Purchase</button>
             <button class="modal-premium-subscribe-close">&times;</button>
