--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,10 @@
     <link rel="stylesheet" href="/css/captcha.css">
     <link rel="stylesheet" href="/css/interactivehelp.css">
     <link rel="stylesheet" href="/css/pushnotify.css">
-    <link rel="stylesheet" href="css/banner_promo.css">
-    <link rel="stylesheet" href="css/modal_promo.css">
+    <link rel="stylesheet" href="/css/banner_promo.css">
+    <link rel="stylesheet" href="/css/modal_promo.css">
     <link rel="stylesheet" href="/css/deposit.css">
-    <link rel="stylesheet" href="css/modal_premium.css">
+    <link rel="stylesheet" href="/css/modal_premium.css">
 </head>
 
 <body>
@@ -261,7 +261,7 @@
                 <label for="programSelect" class="modal-premium-subscribe-label premium-subs-label-typeprogram theme-text">Type of program</label>
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="programSelect" class="modal-premium-subscribe-select"></select>
-                    <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
+                    <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon"
                         class="modal-premium-subscribe-icon" />
                 </div>
             </div>
@@ -270,7 +270,7 @@
                 <label for="planSelect" class="modal-premium-subscribe-label premium-subs-label-tariffplan theme-text">Tariff plan program</label>
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="planSelect" class="modal-premium-subscribe-select"></select>
-                    <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
+                    <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon"
                         class="modal-premium-subscribe-icon" />
                 </div>
             </div>
