Test update + update localization v12

--- a/profile.html
+++ b/profile.html
@@ -433,10 +433,10 @@
         <script src="/js/download.js"></script>
         <script src="/js/pushnotify.js"></script>
         <script src="/js/profile.js"></script>
-        <script src="js/banner_promo.js"></script>
-        <script src="js/modal_promo.js"></script>
-        <script src="js/modal_deposit.js" defer></script>
-        <script src="js/modal_premium.js"></script>
+        <script src="/js/banner_promo.js"></script>
+        <script src="/js/modal_promo.js"></script>
+        <script src="/js/modal_deposit.js" defer></script>
+        <script src="/js/modal_premium.js"></script>
 </body>
 
 </html>
