Test update + update localization v14

--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/captcha.css">
     <link rel="stylesheet" href="/css/interactivehelp.css">
     <link rel="stylesheet" href="/css/pushnotify.css">
+    <link rel="stylesheet" href="/css/modal_message.css">
     <link rel="stylesheet" href="/css/banner_promo.css">
     <link rel="stylesheet" href="/css/modal_promo.css">
     <link rel="stylesheet" href="/css/deposit.css">
