--- a/home.html
+++ b/home.html
@@ -260,7 +260,9 @@
             </p>
 
             <div class="modal-premium-subscribe-field">
-                <label for="programSelect" class="modal-premium-subscribe-label premium-subs-label-typeprogram theme-text">Type of program</label>
+                <label for="programSelect"
+                    class="modal-premium-subscribe-label premium-subs-label-typeprogram theme-text">Type of
+                    program</label>
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="programSelect" class="modal-premium-subscribe-select"></select>
                     <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
@@ -269,7 +271,9 @@
             </div>
 
             <div class="modal-premium-subscribe-field">
-                <label for="planSelect" class="modal-premium-subscribe-label premium-subs-label-tariffplan theme-text">Tariff plan program</label>
+                <label for="planSelect"
+                    class="modal-premium-subscribe-label premium-subs-label-tariffplan theme-text">Tariff plan
+                    program</label>
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="planSelect" class="modal-premium-subscribe-select"></select>
                     <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
@@ -277,7 +281,11 @@
                 </div>
             </div>
 
-            <p class="modal-premium-subscribe-price theme-text">Amount to be paid:</p> <span id="priceValue">0</span>
+            <div class="modal-premium-subscribe-price-wrapper">
+                <p class="modal-premium-subscribe-price theme-text">Amount to be paid:</p>
+                <span id="priceValue" class="modal-premium-subscribe-price-value theme-text">0</span>
+            </div>
+
 
             <button id="buyButton" class="modal-premium-subscribe-button" disabled>Purchase</button>
             <button class="modal-premium-subscribe-close">&times;</button>
