--- a/profile.html
+++ b/profile.html
@@ -276,7 +276,10 @@
                 </div>
             </div>
 
-            <p class="modal-premium-subscribe-price theme-text">Amount to be paid: <span id="priceValue">0</span></p>
+            <div class="modal-premium-subscribe-price-wrapper">
+                <p class="modal-premium-subscribe-price theme-text">Amount to be paid:</p>
+                <span id="priceValue" class="modal-premium-subscribe-price-value theme-text">0</span>
+            </div>
 
             <button id="buyButton" class="modal-premium-subscribe-button" disabled>Purchase</button>
             <button class="modal-premium-subscribe-close">&times;</button>
