Test update + update localization v20

--- a/home.html
+++ b/home.html
@@ -252,9 +252,9 @@
 
     <!-- Модальное окно: Premium subscirbe & price - buy -->
     <div class="modal-premium-subscribe-backdrop">
-        <div class="modal-premium-subscribe-container">
-            <h2 class="modal-premium-subscribe-title">Purchase of a premium subscription</h2>
-            <p class="modal-premium-subscribe-description">
+        <div class="modal-premium-subscribe-container theme-modal">
+            <h2 class="modal-premium-subscribe-title theme-text">Purchase of a premium subscription</h2>
+            <p class="modal-premium-subscribe-description theme-text">
                 By purchasing a premium subscription, you get access to experimental features and disable ads and
                 banners.
             </p>
@@ -266,7 +266,7 @@
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="programSelect" class="modal-premium-subscribe-select"></select>
                     <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
-                        class="modal-premium-subscribe-icon" />
+                        class="modal-premium-subscribe-icon theme-icon" />
                 </div>
             </div>
 
@@ -277,7 +277,7 @@
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="planSelect" class="modal-premium-subscribe-select"></select>
                     <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
-                        class="modal-premium-subscribe-icon" />
+                        class="modal-premium-subscribe-icon theme-icon" />
                 </div>
             </div>
 
@@ -290,7 +290,6 @@
             <button class="modal-premium-subscribe-close">&times;</button>
         </div>
     </div>
-
 
     <!-- Модальное окно проверки: Я не робот. -->
     <div id="captchaModal" class="captcha-modal" style="display: none;">
