--- a/profile.html
+++ b/profile.html
@@ -251,28 +251,32 @@
 
     <!-- Модальное окно: Premium subscirbe & price - buy -->
     <div class="modal-premium-subscribe-backdrop">
-        <div class="modal-premium-subscribe-container">
-            <h2 class="modal-premium-subscribe-title">Purchase of a premium subscription</h2>
-            <p class="modal-premium-subscribe-description">
+        <div class="modal-premium-subscribe-container theme-modal">
+            <h2 class="modal-premium-subscribe-title theme-text">Purchase of a premium subscription</h2>
+            <p class="modal-premium-subscribe-description theme-text">
                 By purchasing a premium subscription, you get access to experimental features and disable ads and
                 banners.
             </p>
 
             <div class="modal-premium-subscribe-field">
-                <label for="programSelect" class="modal-premium-subscribe-label premium-subs-label-typeprogram theme-text">Type of program</label>
+                <label for="programSelect"
+                    class="modal-premium-subscribe-label premium-subs-label-typeprogram theme-text">Type of
+                    program</label>
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="programSelect" class="modal-premium-subscribe-select"></select>
-                    <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon"
-                        class="modal-premium-subscribe-icon" />
+                    <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
+                        class="modal-premium-subscribe-icon theme-icon" />
                 </div>
             </div>
 
             <div class="modal-premium-subscribe-field">
-                <label for="planSelect" class="modal-premium-subscribe-label premium-subs-label-tariffplan theme-text">Tariff plan program</label>
+                <label for="planSelect"
+                    class="modal-premium-subscribe-label premium-subs-label-tariffplan theme-text">Tariff plan
+                    program</label>
                 <div class="modal-premium-subscribe-select-wrapper">
                     <select id="planSelect" class="modal-premium-subscribe-select"></select>
-                    <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon"
-                        class="modal-premium-subscribe-icon" />
+                    <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon"
+                        class="modal-premium-subscribe-icon theme-icon" />
                 </div>
             </div>
 
