--- a/profile.html
+++ b/profile.html
@@ -389,6 +389,16 @@
             </div>
         </div>
 
+        <!-- Блок подписки -->
+        <div class="premium-subscribe-card" style="display: none;">
+            <div class="data-title gray-text">Подписка</div>
+            <div class="data-item theme-text">
+                <img src="/assets/icons/premium.svg" class="data-icon theme-icon" alt="Premium">
+                <span class="label-premium theme-text">Статус подписки:</span>
+                <span class="user-premium-status"></span>
+            </div>
+        </div>
+
         <!-- Правая колонка: биография -->
         <div class="bio-card">
             <div class="bio-title gray-text">Biography</div>
