--- a/profile.html
+++ b/profile.html
@@ -414,10 +414,17 @@
             <!-- Блок подписки -->
             <div class="premium-subscribe-card" style="display: none;">
                 <div class="data-title gray-text">Подписка</div>
+
                 <div class="data-item theme-text">
                     <img src="/assets/icons/benefit.svg" class="data-icon theme-icon" alt="Premium">
                     <span class="label-premium theme-text">Статус подписки:</span>
                     <span class="user-premium-status"></span>
+                </div>
+
+                <div class="data-item theme-text">
+                    <img src="/assets/icons/exclamation.svg" class="data-icon theme-icon" alt="Plan">
+                    <span class="label-premium theme-text">Тарифный план:</span>
+                    <span class="user-premium-tarif-status"></span>
                 </div>
             </div>
         </div>
