Update user profile + add card block info premium subscribe v9

--- a/profile.html
+++ b/profile.html
@@ -375,7 +375,7 @@
 
             <!-- Блок с данными пользователя -->
             <div class="data-card">
-                <div class="data-title gray-text">You details</div>
+                <div class="data-title gray-text">Details</div>
                 <div class="data-item theme-text">
                     <img src="/assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
                     <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>
@@ -383,7 +383,7 @@
                 </div>
                 <div class="data-item theme-text">
                     <img src="/assets/icons/birthday.svg" class="data-icon theme-icon" alt="Birthday">
-                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>
+                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birth:</span>
                     <span class="user-birthday"></span>
                 </div>
             </div>
